# DropSpot

./: README.md
backend/: .gitignore  alembic.ini  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_users_table.py  0002_add_drops_and_waitlist_entries.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: __init__.py  admin_drops.py  auth.py  drops.py
backend/app/core/: __init__.py  config.py  priority.py  security.py
backend/app/crud/: __init__.py  claim.py  drop.py  user.py  waitlist.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  drop.py  user.py  waitlist_entry.py
backend/app/schemas/: __init__.py  auth.py  claim.py  drop.py  token.py  user.py  waitlist.py
backend/app/services/: __init__.py  waitlist.py
backend/scripts/: seed_drops.py
backend/tests/: __init__.py  conftest.py
backend/tests/api/: test_admin_flow.py
backend/tests/services/: test_waitlist.py
frontend/: jest.config.js  jest.setup.js  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/drops/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/components/: app-shell.tsx  footer.tsx  header.tsx
frontend/src/hooks/: use-admin-drops.ts  use-auth.ts  use-drops.ts
frontend/src/lib/: admin.ts  api-client.ts  auth.ts  datetime.ts  drops.ts
frontend/src/providers/: auth-provider.tsx  query-provider.tsx
frontend/src/types/: admin.ts  auth.ts  drop.ts
(+10 files in other folders)
